crates/data-dict/tests/snapshots/validate_schema__s08_units_on_non_quantity.snap
---
source: crates/data-dict/tests/validate_schema.rs
expression: "failing_diagnostic(\"schema/s08-units-on-non-quantity.yaml\")"
---
Error: [S08]
    ╭─[ schema/s08-units-on-non-quantity.yaml:13:16 ]
    │
 13 │         units: place
    │                ──┬──  
    │                  ╰──── column `races.finish_rank` has `units` but type `number(ordinal)`; `units` is only valid on `number(quantity)` columns
────╯
